<resources>
    <string name="app_name">RecipesByIngredients</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Рецепти според состојки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_menu_search_recipes_tittle">Пребарувај</string>
    <string name="navigation_menu_my_ingredients_tittle">Мои состојки</string>
    <string name="navigation_menu_my_recipes_tittle">Мои рецепти</string>
    <string name="my_ingredients_auto_complete_placeholder">Додади состојка</string>
    <string name="my_ingredients_delete_ingredient_button_text">Избриши</string>
    <string name="my_ingredients_add_ingredient_button_text">Додади</string>
    <string name="search_recipes_search_button_text">Пребарај</string>
    <string name="search_recipes_add_ingredient_button">Додади</string>
    <string name="search_recipes_auto_complete_placeholder">Додади состојка</string>
    <string name="my_recipes_recipes_details_link_placeholder">Линк</string>
    <string name="my_recipes_recipes_details_go_to_instructions_button_text">Инструкции</string>
</resources>