<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ListView
        android:id="@+id/my_ingredients_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>

    <AutoCompleteTextView
        android:id="@+id/my_ingredients_add_ingredient_autocomplete_text_view"
        android:hint="@string/my_ingredients_auto_complete_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/my_ingredients_add_ingredient_button"
        android:text="@string/my_ingredients_add_ingredient_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/my_ingredients_delete_ingredient_button"
        android:text="@string/my_ingredients_delete_ingredient_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
