<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridView
        android:id="@+id/search_layout_ingredients_list"
        android:numColumns="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <AutoCompleteTextView
            android:id="@+id/search_layout_add_ingredient_autocomplete_text_view"
            android:hint="@string/search_recipes_auto_complete_placeholder"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:capitalize="none"
            style="@style/AutocompleteTextViewStyle" />

        <Button
            android:id="@+id/search_layout_add_ingredient_button"
            android:text="@string/search_recipes_add_ingredient_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/search_layout_search_button"
        android:text="@string/search_recipes_search_button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
